// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataTableColumns pinned 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 12px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border-top: solid 1px rgba(0, 0, 0, 0.33);
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  padding: 0px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: flex-end;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background: none;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  padding: 0px;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: flex-end;
  padding: 12px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  padding: 0px;
}

.c5 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 24px;
}

.c9 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c9 g {
  fill: inherit;
  stroke: inherit;
}

.c9 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c9 *[stroke*='#'],
.c9 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c9 *[fill-rule],
.c9 *[FILL-RULE],
.c9 *[fill*='#'],
.c9 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c13 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #555555;
  stroke: #555555;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c13 *[stroke*='#'],
.c13 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*='#'],
.c13 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  line-height: 0;
  padding: 12px;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus >circle,
.c8:focus >ellipse,
.c8:focus >line,
.c8:focus >path,
.c8:focus >polygon,
.c8:focus >polyline,
.c8:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus ::-moz-focus-inner {
  border: 0;
}

.c8:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) >circle,
.c8:focus:not(:focus-visible) >ellipse,
.c8:focus:not(:focus-visible) >line,
.c8:focus:not(:focus-visible) >path,
.c8:focus:not(:focus-visible) >polygon,
.c8:focus:not(:focus-visible) >polyline,
.c8:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c10:hover {
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
}

.c10:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus >circle,
.c10:focus >ellipse,
.c10:focus >line,
.c10:focus >path,
.c10:focus >polygon,
.c10:focus >polyline,
.c10:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus ::-moz-focus-inner {
  border: 0;
}

.c10:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) >circle,
.c10:focus:not(:focus-visible) >ellipse,
.c10:focus:not(:focus-visible) >line,
.c10:focus:not(:focus-visible) >path,
.c10:focus:not(:focus-visible) >polygon,
.c10:focus:not(:focus-visible) >polyline,
.c10:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c4 {
  cursor: move;
}

.c0 {
  min-height: 0;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    border-top: solid 1px rgba(0, 0, 0, 0.33);
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c11 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c11 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c5 {
    width: 12px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  aria-label="Order columns Tab Contents"
  class="c0"
  role="tabpanel"
>
  <div
    class="c1"
  >
    <ul
      aria-labelledby="test-data--order-columns-tab"
      class="c2"
      id="test-data--order-columns"
      role="list"
    >
      <li
        class="c3 c4"
        draggable="true"
      >
        <span
          class="textRecipe_size_medium"
        >
          1
        </span>
        <div
          class="c5"
        />
        <div
          class="c6"
        >
          <span
            class="textRecipe_size_medium"
            style="font-weight: bold;"
          >
            Name
          </span>
        </div>
        <div
          class="c5"
        />
        <div
          class="c7"
        >
          <button
            aria-label="1 Name move up"
            class="c8"
            disabled=""
            id="NameMoveUp"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormUp"
              class="c9"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 15-6-6-6 6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="1 Name move down"
            class="c10"
            id="NameMoveDown"
            tabindex="0"
            type="button"
          >
            <svg
              aria-label="FormDown"
              class="c9"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </li>
      <li
        class="c11 "
      >
        <span
          class="textRecipe_size_medium"
          style="color: rgb(85, 85, 85);"
        >
          2
        </span>
        <div
          class="c5"
        />
        <div
          class="c6"
        >
          <span
            class="textRecipe_size_medium"
            style="color: rgb(85, 85, 85); font-weight: bold;"
          >
            Size
          </span>
        </div>
        <div
          class="c5"
        />
        <div
          class="c12"
        >
          <svg
            aria-label="Column locked, order cannot be changed."
            class="c13"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 23V11H5v12h14zm-7-8v4m5-8V7c0-3 0-6-5-6S7 4 7 7v4"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </div>
      </li>
      <li
        class="c14 c4"
        draggable="true"
      >
        <span
          class="textRecipe_size_medium"
        >
          3
        </span>
        <div
          class="c5"
        />
        <div
          class="c6"
        >
          <span
            class="textRecipe_size_medium"
            style="font-weight: bold;"
          >
            Percent
          </span>
        </div>
        <div
          class="c5"
        />
        <div
          class="c7"
        >
          <button
            aria-label="2 Percent move up"
            class="c10"
            id="PercentMoveUp"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormUp"
              class="c9"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 15-6-6-6 6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="2 Percent move down"
            class="c8"
            disabled=""
            id="PercentMoveDown"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormDown"
              class="c9"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DataTableColumns remove column 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 0 auto;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c11 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c6 {
  position: relative;
  border-spacing: 0;
  border-collapse: separate;
}

.c10:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus >circle,
.c10:focus >ellipse,
.c10:focus >line,
.c10:focus >path,
.c10:focus >polygon,
.c10:focus >polyline,
.c10:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus ::-moz-focus-inner {
  border: 0;
}

.c10:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) >circle,
.c10:focus:not(:focus-visible) >ellipse,
.c10:focus:not(:focus-visible) >line,
.c10:focus:not(:focus-visible) >path,
.c10:focus:not(:focus-visible) >polygon,
.c10:focus:not(:focus-visible) >polyline,
.c10:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c9:focus {
  outline: 2px solid #6FFFB0;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
    class="c0"
  >
    <div
      class="c1"
      id="test-data"
    >
      <form
        class="c2"
      >
        <button
          aria-label="Open column selector"
          class="c3"
          id="test-data--columns-control"
          type="button"
        >
          <svg
            aria-label="Splits"
            class="c4"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 22h22V2H1v20zM8 2v20V2zm8 0v20V2z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </form>
      <table
        class="c5 c6"
      >
        <thead
          class="StyledTable__StyledTableHeader-sc-1m3u5g-4 StyledDataTable__StyledDataTableHeader-sc-xrlyjm-5"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2 "
          >
            <th
              class="c7 "
              id="grommet-data-table-header-name"
              scope="col"
            >
              <div
                class="c8"
              >
                <span
                  class="textRecipe_size_medium"
                >
                  Name
                </span>
              </div>
            </th>
            <th
              class="c7 "
              id="grommet-data-table-header-age"
              scope="col"
            >
              <div
                class="c8"
              >
                <span
                  class="textRecipe_size_medium"
                >
                  Age
                </span>
              </div>
            </th>
            <th
              class="c7 "
              id="grommet-data-table-header-size"
              scope="col"
            >
              <div
                class="c8"
              >
                <span
                  class="textRecipe_size_medium"
                >
                  Size
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="StyledTable__StyledTableBody-sc-1m3u5g-3 c9"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2 c10"
          >
            <th
              class="c11 "
              scope="row"
            >
              <div
                class="c12"
              >
                <span
                  class="textRecipe_size_medium"
                  style="font-weight: bold;"
                >
                  a
                </span>
              </div>
            </th>
            <td
              class="c11 "
            >
              <div
                class="c12"
              />
            </td>
            <td
              class="c11 "
            >
              <div
                class="c12"
              >
                <span
                  class="textRecipe_size_medium"
                >
                  s
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2 c10"
          >
            <th
              class="c11 "
              scope="row"
            >
              <div
                class="c12"
              >
                <span
                  class="textRecipe_size_medium"
                  style="font-weight: bold;"
                >
                  b
                </span>
              </div>
            </th>
            <td
              class="c11 "
            >
              <div
                class="c12"
              />
            </td>
            <td
              class="c11 "
            >
              <div
                class="c12"
              >
                <span
                  class="textRecipe_size_medium"
                >
                  m
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataTableColumns remove column 2`] = `
.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 6px;
}

.c14 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c13 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  padding-left: 48px;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c2 {
  position: relative;
  width: 100%;
}

.c3 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 12px;
}

.c0 {
  min-height: 0;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    height: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    height: 6px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  aria-label="Select columns Tab Contents"
  class="c0"
  role="tabpanel"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-label="Search"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
      <input
        autocomplete="off"
        class="c5"
        placeholder="Search"
        type="search"
        value=""
      />
    </div>
    <div
      class="c6"
    />
    <div
      aria-labelledby="test-data--select-columns-tab"
      class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
      id="test-data--select-columns"
      role="group"
    >
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 "
          >
            <svg
              class="c13"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          name
        </span>
      </label>
      <div
        class="c14"
      />
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 "
          >
            <svg
              class="c13"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          size
        </span>
      </label>
      <div
        class="c14"
      />
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 "
          >
            <svg
              class="c13"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          age
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`DataTableColumns renders 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 0 auto;
  justify-content: center;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c8:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus >circle,
.c8:focus >ellipse,
.c8:focus >line,
.c8:focus >path,
.c8:focus >polygon,
.c8:focus >polyline,
.c8:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus ::-moz-focus-inner {
  border: 0;
}

.c8:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) >circle,
.c8:focus:not(:focus-visible) >ellipse,
.c8:focus:not(:focus-visible) >line,
.c8:focus:not(:focus-visible) >path,
.c8:focus:not(:focus-visible) >polygon,
.c8:focus:not(:focus-visible) >polyline,
.c8:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c11 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c15 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c9 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c10 {
  position: relative;
  border-spacing: 0;
  border-collapse: separate;
}

.c14:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c14:focus >circle,
.c14:focus >ellipse,
.c14:focus >line,
.c14:focus >path,
.c14:focus >polygon,
.c14:focus >polyline,
.c14:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c14:focus ::-moz-focus-inner {
  border: 0;
}

.c14:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c14:focus:not(:focus-visible) >circle,
.c14:focus:not(:focus-visible) >ellipse,
.c14:focus:not(:focus-visible) >line,
.c14:focus:not(:focus-visible) >path,
.c14:focus:not(:focus-visible) >polygon,
.c14:focus:not(:focus-visible) >polyline,
.c14:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c14:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c13:focus {
  outline: 2px solid #6FFFB0;
}

.c13:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c7 {
    margin-top: 12px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      id="test-data"
    >
      <form
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <div
              class="c1"
            >
              <button
                aria-label="Open column selector"
                class="c5"
                id="test-data--columns-control"
                type="button"
              >
                <svg
                  aria-label="Splits"
                  class="c6"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M1 22h22V2H1v20zM8 2v20V2zm8 0v20V2z"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
          <footer
            class="c7"
          >
            <button
              class="c8"
              type="submit"
            >
              Apply filters
            </button>
          </footer>
        </div>
      </form>
      <table
        class="c9 c10"
      >
        <thead
          class="StyledTable__StyledTableHeader-sc-1m3u5g-4 StyledDataTable__StyledDataTableHeader-sc-xrlyjm-5"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2 "
          >
            <th
              class="c11 "
              id="grommet-data-table-header-name"
              scope="col"
            >
              <div
                class="c12"
              >
                <span
                  class="textRecipe_size_medium"
                >
                  Name
                </span>
              </div>
            </th>
            <th
              class="c11 "
              id="grommet-data-table-header-size"
              scope="col"
            >
              <div
                class="c12"
              >
                <span
                  class="textRecipe_size_medium"
                >
                  Size
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          class="StyledTable__StyledTableBody-sc-1m3u5g-3 c13"
        >
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2 c14"
          >
            <th
              class="c15 "
              scope="row"
            >
              <div
                class="c16"
              >
                <span
                  class="textRecipe_size_medium"
                  style="font-weight: bold;"
                >
                  a
                </span>
              </div>
            </th>
            <td
              class="c15 "
            >
              <div
                class="c16"
              >
                <span
                  class="textRecipe_size_medium"
                >
                  s
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="StyledTable__StyledTableRow-sc-1m3u5g-2 c14"
          >
            <th
              class="c15 "
              scope="row"
            >
              <div
                class="c16"
              >
                <span
                  class="textRecipe_size_medium"
                  style="font-weight: bold;"
                >
                  b
                </span>
              </div>
            </th>
            <td
              class="c15 "
            >
              <div
                class="c16"
              >
                <span
                  class="textRecipe_size_medium"
                >
                  m
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataTableColumns renders 2`] = `
.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 6px;
}

.c14 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c13 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  padding-left: 48px;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c2 {
  position: relative;
  width: 100%;
}

.c3 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 12px;
}

.c0 {
  min-height: 0;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    height: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    height: 6px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  aria-label="Select columns Tab Contents"
  class="c0"
  role="tabpanel"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-label="Search"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
      <input
        autocomplete="off"
        class="c5"
        placeholder="Search"
        type="search"
        value=""
      />
    </div>
    <div
      class="c6"
    />
    <div
      aria-labelledby="test-data--select-columns-tab"
      class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
      id="test-data--select-columns"
      role="group"
    >
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 "
          >
            <svg
              class="c13"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          name
        </span>
      </label>
      <div
        class="c14"
      />
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 "
          >
            <svg
              class="c13"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          size
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`DataTableColumns renders 3`] = `
<div
  aria-label="Order columns Tab Contents"
  class="StyledTabs__StyledTabPanel-sc-a4fwxl-1 Wqljf"
  role="tabpanel"
>
  <div
    class="StyledBox-sc-13pk1d4-0 kJkQem"
  >
    .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border-top: solid 1px rgba(0, 0, 0, 0.33);
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  padding: 0px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: flex-end;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  padding: 0px;
}

.c3 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 24px;
}

.c7 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c7 *[stroke*='#'],
.c7 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*='#'],
.c7 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  line-height: 0;
  padding: 12px;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c8:hover {
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus >circle,
.c8:focus >ellipse,
.c8:focus >line,
.c8:focus >path,
.c8:focus >polygon,
.c8:focus >polyline,
.c8:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus ::-moz-focus-inner {
  border: 0;
}

.c8:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) >circle,
.c8:focus:not(:focus-visible) >ellipse,
.c8:focus:not(:focus-visible) >line,
.c8:focus:not(:focus-visible) >path,
.c8:focus:not(:focus-visible) >polygon,
.c8:focus:not(:focus-visible) >polyline,
.c8:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c2 {
  cursor: move;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    border-top: solid 1px rgba(0, 0, 0, 0.33);
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c3 {
    width: 12px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<ul
      aria-labelledby="test-data--order-columns-tab"
      class="c0"
      id="test-data--order-columns"
      role="list"
    >
      <li
        class="c1 c2"
        draggable="true"
      >
        <span
          class="textRecipe_size_medium"
        >
          1
        </span>
        <div
          class="c3"
        />
        <div
          class="c4"
        >
          name
        </div>
        <div
          class="c3"
        />
        <div
          class="c5"
        >
          <button
            aria-label="1 name move up"
            class="c6"
            disabled=""
            id="nameMoveUp"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormUp"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 15-6-6-6 6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="1 name move down"
            class="c8"
            id="nameMoveDown"
            tabindex="0"
            type="button"
          >
            <svg
              aria-label="FormDown"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </li>
      <li
        class="c9 c2"
        draggable="true"
      >
        <span
          class="textRecipe_size_medium"
        >
          2
        </span>
        <div
          class="c3"
        />
        <div
          class="c4"
        >
          size
        </div>
        <div
          class="c3"
        />
        <div
          class="c5"
        >
          <button
            aria-label="2 size move up"
            class="c8"
            id="sizeMoveUp"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormUp"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 15-6-6-6 6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="2 size move down"
            class="c6"
            disabled=""
            id="sizeMoveDown"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormDown"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DataTableColumns search 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 0 auto;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c7 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c11 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  text-align: start;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c5 {
  border-spacing: 0;
  border-collapse: collapse;
  width: inherit;
}

.c6 {
  position: relative;
  border-spacing: 0;
  border-collapse: separate;
}

.c10:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus >circle,
.c10:focus >ellipse,
.c10:focus >line,
.c10:focus >path,
.c10:focus >polygon,
.c10:focus >polyline,
.c10:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c10:focus ::-moz-focus-inner {
  border: 0;
}

.c10:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) >circle,
.c10:focus:not(:focus-visible) >ellipse,
.c10:focus:not(:focus-visible) >line,
.c10:focus:not(:focus-visible) >path,
.c10:focus:not(:focus-visible) >polygon,
.c10:focus:not(:focus-visible) >polyline,
.c10:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c10:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c9:focus {
  outline: 2px solid #6FFFB0;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
    id="test-data"
  >
    <form
      class="c2"
    >
      <button
        aria-label="Open column selector"
        class="c3"
        id="test-data--columns-control"
        type="button"
      >
        <svg
          aria-label="Splits"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="M1 22h22V2H1v20zM8 2v20V2zm8 0v20V2z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </form>
    <table
      class="c5 c6"
    >
      <thead
        class="StyledTable__StyledTableHeader-sc-1m3u5g-4 StyledDataTable__StyledDataTableHeader-sc-xrlyjm-5"
      >
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2 "
        >
          <th
            class="c7 "
            id="grommet-data-table-header-name"
            scope="col"
          >
            <div
              class="c8"
            >
              <span
                class="textRecipe_size_medium"
              >
                Name
              </span>
            </div>
          </th>
          <th
            class="c7 "
            id="grommet-data-table-header-size"
            scope="col"
          >
            <div
              class="c8"
            >
              <span
                class="textRecipe_size_medium"
              >
                Size
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="StyledTable__StyledTableBody-sc-1m3u5g-3 c9"
      >
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2 c10"
        >
          <th
            class="c11 "
            scope="row"
          >
            <div
              class="c12"
            >
              <span
                class="textRecipe_size_medium"
                style="font-weight: bold;"
              >
                a
              </span>
            </div>
          </th>
          <td
            class="c11 "
          >
            <div
              class="c12"
            >
              <span
                class="textRecipe_size_medium"
              >
                s
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="StyledTable__StyledTableRow-sc-1m3u5g-2 c10"
        >
          <th
            class="c11 "
            scope="row"
          >
            <div
              class="c12"
            >
              <span
                class="textRecipe_size_medium"
                style="font-weight: bold;"
              >
                b
              </span>
            </div>
          </th>
          <td
            class="c11 "
          >
            <div
              class="c12"
            >
              <span
                class="textRecipe_size_medium"
              >
                m
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTableColumns search 2`] = `
.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 12px;
  padding-bottom: 12px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 6px;
}

.c14 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c13 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  padding-left: 48px;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c2 {
  position: relative;
  width: 100%;
}

.c3 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 12px;
}

.c0 {
  min-height: 0;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    height: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    height: 6px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  aria-label="Select columns Tab Contents"
  class="c0"
  role="tabpanel"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-label="Search"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
      <input
        autocomplete="off"
        class="c5"
        placeholder="Search"
        type="search"
        value=""
      />
    </div>
    <div
      class="c6"
    />
    <div
      aria-labelledby="test-data--select-columns-tab"
      class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
      id="test-data--select-columns"
      role="group"
    >
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 "
          >
            <svg
              class="c13"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          name
        </span>
      </label>
      <div
        class="c14"
      />
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 "
          >
            <svg
              class="c13"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          size
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`DataTableColumns search 3`] = `
<button
  aria-label="Open column selector"
  class="StyledButton-sc-323bzc-0 emHfGN"
  data-g-tabindex="none"
  id="test-data--columns-control"
  tabindex="-1"
  type="button"
>
  <svg
    aria-label="Splits"
    class="StyledIcon-sc-ofa7kd-0 fmAnVC"
    viewBox="0 0 24 24"
  >
    <path
      d="M1 22h22V2H1v20zM8 2v20V2zm8 0v20V2z"
      fill="none"
      stroke="#000"
      stroke-width="2"
    />
  </svg>
</button>
`;

exports[`DataTableColumns search 4`] = `
"@media only screen and (max-width: 768px) {
  .dwoePz {
    margin-top: 12px;
  }
}
@media only screen and (max-width: 768px) {
  .dAkuEK {
    padding: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .ZXqDp {
    margin-left: 6px;
    margin-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .ZXqDp {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}
@media only screen and (max-width: 768px) {
  .ZXqDp {
    border-bottom: solid 2px #000000;
  }
}
@media only screen and (max-width: 768px) {
  .ZXqDp {
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .fWYnbV {
    margin-left: 6px;
    margin-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .fWYnbV {
    margin-top: 2px;
    margin-bottom: 2px;
  }
}
@media only screen and (max-width: 768px) {
  .fWYnbV {
    border-bottom: solid 2px #7d4cdb;
  }
}
@media only screen and (max-width: 768px) {
  .fWYnbV {
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .iAPJAR {
    padding-top: 6px;
    padding-bottom: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .ktRvhu {
    margin-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .cJyZCd {
    border: solid 2px #7d4cdb;
  }
}
@media only screen and (max-width: 768px) {
  .kJkQem {
    padding-top: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .dXSLxz {
    border-top: solid 1px rgba(0, 0, 0, 0.33);
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}
@media only screen and (max-width: 768px) {
  .dXSLxz {
    padding: 0px;
  }
}
@media only screen and (max-width: 768px) {
  .eXWYDB {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}
@media only screen and (max-width: 768px) {
  .eXWYDB {
    padding: 0px;
  }
}
@media only screen and (max-width: 768px) {
  .cKRbXv {
    height: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .eEiScb {
    height: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .fqAyzL {
    width: 12px;
  }
}
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  .eOZbBj {
    display: flex;
    align-items: stretch;
  }
}
.emHfGN {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}
.emHfGN:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6fffb0;
}
.emHfGN:focus > circle,
.emHfGN:focus > ellipse,
.emHfGN:focus > line,
.emHfGN:focus > path,
.emHfGN:focus > polygon,
.emHfGN:focus > polyline,
.emHfGN:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6fffb0;
}
.emHfGN:focus ::-moz-focus-inner {
  border: 0;
}
.emHfGN:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}
.emHfGN:focus:not(:focus-visible) > circle,
.emHfGN:focus:not(:focus-visible) > ellipse,
.emHfGN:focus:not(:focus-visible) > line,
.emHfGN:focus:not(:focus-visible) > path,
.emHfGN:focus:not(:focus-visible) > polygon,
.emHfGN:focus:not(:focus-visible) > polyline,
.emHfGN:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}
.emHfGN:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}"
`;

exports[`DataTableColumns should use theme icons 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 12px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background: none;
  border-top: solid 1px rgba(0, 0, 0, 0.33);
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  padding: 0px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: flex-end;
  padding: 12px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  padding: 0px;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: flex-end;
}

.c4 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 24px;
}

.c12 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c12 g {
  fill: inherit;
  stroke: inherit;
}

.c12 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c12 *[stroke*='#'],
.c12 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c12 *[fill-rule],
.c12 *[FILL-RULE],
.c12 *[fill*='#'],
.c12 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c7 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #555555;
  stroke: #555555;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c7 *[stroke*='#'],
.c7 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*='#'],
.c7 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  line-height: 0;
  padding: 12px;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus >circle,
.c11:focus >ellipse,
.c11:focus >line,
.c11:focus >path,
.c11:focus >polygon,
.c11:focus >polyline,
.c11:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus ::-moz-focus-inner {
  border: 0;
}

.c11:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) >circle,
.c11:focus:not(:focus-visible) >ellipse,
.c11:focus:not(:focus-visible) >line,
.c11:focus:not(:focus-visible) >path,
.c11:focus:not(:focus-visible) >polygon,
.c11:focus:not(:focus-visible) >polyline,
.c11:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c9 {
  cursor: move;
}

.c0 {
  min-height: 0;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    border-top: solid 1px rgba(0, 0, 0, 0.33);
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c4 {
    width: 12px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  aria-label="Order columns Tab Contents"
  class="c0"
  role="tabpanel"
>
  <div
    class="c1"
  >
    <ul
      aria-labelledby="test-data--order-columns-tab"
      class="c2"
      id="test-data--order-columns"
      role="list"
    >
      <li
        class="c3 "
      >
        <span
          class="textRecipe_size_medium"
          style="color: rgb(85, 85, 85);"
        >
          1
        </span>
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <span
            class="textRecipe_size_medium"
            style="color: rgb(85, 85, 85); font-weight: bold;"
          >
            name
          </span>
        </div>
        <div
          class="c4"
        />
        <div
          class="c6"
        >
          <svg
            aria-label="Column locked, order cannot be changed."
            class="c7"
            viewBox="0 0 24 24"
          >
            <path
              d="m16 3-6 6s-4-1-7 2l10 10c3-3 2-7 2-7l6-6-5-5zM1 23l7-7m6-15 9 9"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </div>
      </li>
      <li
        class="c8 c9"
        draggable="true"
      >
        <span
          class="textRecipe_size_medium"
        >
          2
        </span>
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <span
            class="textRecipe_size_medium"
            style="font-weight: bold;"
          >
            size
          </span>
        </div>
        <div
          class="c4"
        />
        <div
          class="c10"
        >
          <button
            aria-label="1 size move up"
            class="c11"
            disabled=""
            id="sizeMoveUp"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormUp"
              class="c12"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 15-6-6-6 6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="1 size move down"
            class="c11"
            disabled=""
            id="sizeMoveDown"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormDown"
              class="c12"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DataTableColumns theme tabs pad, selectColumns pad and gap, orderColumns pad 1`] = `
.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding-top: 48px;
  padding-bottom: 48px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 48px;
}

.c14 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c13 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

.c8 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled])+div,
.c8:hover input:not([disabled])+span {
  border-color: #000000;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c10 {
  flex-shrink: 0;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  padding-left: 48px;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c2 {
  position: relative;
  width: 100%;
}

.c3 {
  position: absolute;
  display: flex;
  justify: center;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  left: 12px;
}

.c0 {
  min-height: 0;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 24px;
    padding-bottom: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border: solid 2px #7D4CDB;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    height: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c14 {
    height: 6px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
  aria-label="Select columns Tab Contents"
  class="c0"
  role="tabpanel"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-label="Search"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="m15 15 7 7-7-7zm-5.5 2a7.5 7.5 0 1 0 0-15 7.5 7.5 0 0 0 0 15z"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
      <input
        autocomplete="off"
        class="c5"
        placeholder="Search"
        type="search"
        value=""
      />
    </div>
    <div
      class="c6"
    />
    <div
      aria-labelledby="data--select-columns-tab"
      class="c7 StyledCheckBoxGroup-sc-2nhc5d-0"
      id="data--select-columns"
      role="group"
    >
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 "
          >
            <svg
              class="c13"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          name
        </span>
      </label>
      <div
        class="c14"
      />
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 "
          >
            <svg
              class="c13"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          age
        </span>
      </label>
      <div
        class="c14"
      />
      <label
        class="c8"
      >
        <div
          class="c9 c10"
        >
          <input
            checked=""
            class="c11"
            type="checkbox"
          />
          <div
            class="c12 "
          >
            <svg
              class="c13"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          location
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`DataTableColumns theme tabs pad, selectColumns pad and gap, orderColumns pad 2`] = `
<div
  aria-label="Order columns Tab Contents"
  class="StyledTabs__StyledTabPanel-sc-a4fwxl-1 Wqljf"
  role="tabpanel"
>
  <div
    class="StyledBox-sc-13pk1d4-0 fvzSEl"
  >
    .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border-top: solid 1px rgba(0, 0, 0, 0.33);
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  padding: 0px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: flex-end;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  padding: 0px;
}

.c3 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 24px;
}

.c7 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c7 *[stroke*='#'],
.c7 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*='#'],
.c7 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  opacity: 0.3;
  cursor: default;
  line-height: 0;
  padding: 12px;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
  padding: 12px;
}

.c8:hover {
  background-color: rgba(221, 221, 221, 0.4);
  color: #000000;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus >circle,
.c8:focus >ellipse,
.c8:focus >line,
.c8:focus >path,
.c8:focus >polygon,
.c8:focus >polyline,
.c8:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c8:focus ::-moz-focus-inner {
  border: 0;
}

.c8:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) >circle,
.c8:focus:not(:focus-visible) >ellipse,
.c8:focus:not(:focus-visible) >line,
.c8:focus:not(:focus-visible) >path,
.c8:focus:not(:focus-visible) >polygon,
.c8:focus:not(:focus-visible) >polyline,
.c8:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c8:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.c2 {
  cursor: move;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c1 {
    border-top: solid 1px rgba(0, 0, 0, 0.33);
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c3 {
    width: 12px;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<ul
      aria-labelledby="data--order-columns-tab"
      class="c0"
      id="data--order-columns"
      role="list"
    >
      <li
        class="c1 c2"
        draggable="true"
      >
        <span
          class="textRecipe_size_medium"
        >
          1
        </span>
        <div
          class="c3"
        />
        <div
          class="c4"
        >
          name
        </div>
        <div
          class="c3"
        />
        <div
          class="c5"
        >
          <button
            aria-label="1 name move up"
            class="c6"
            disabled=""
            id="nameMoveUp"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormUp"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 15-6-6-6 6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="1 name move down"
            class="c8"
            id="nameMoveDown"
            tabindex="0"
            type="button"
          >
            <svg
              aria-label="FormDown"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </li>
      <li
        class="c9 c2"
        draggable="true"
      >
        <span
          class="textRecipe_size_medium"
        >
          2
        </span>
        <div
          class="c3"
        />
        <div
          class="c4"
        >
          age
        </div>
        <div
          class="c3"
        />
        <div
          class="c5"
        >
          <button
            aria-label="2 age move up"
            class="c8"
            id="ageMoveUp"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormUp"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 15-6-6-6 6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="2 age move down"
            class="c8"
            id="ageMoveDown"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormDown"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </li>
      <li
        class="c9 c2"
        draggable="true"
      >
        <span
          class="textRecipe_size_medium"
        >
          3
        </span>
        <div
          class="c3"
        />
        <div
          class="c4"
        >
          location
        </div>
        <div
          class="c3"
        />
        <div
          class="c5"
        >
          <button
            aria-label="3 location move up"
            class="c8"
            id="locationMoveUp"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormUp"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 15-6-6-6 6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="3 location move down"
            class="c6"
            disabled=""
            id="locationMoveDown"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-label="FormDown"
              class="c7"
              viewBox="0 0 24 24"
            >
              <path
                d="m18 9-6 6-6-6"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
